# RAG-ARC

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README-CN.md  README.Docker-CN.md  README.Docker.md  README.md  app_registration.py  build.sh  clean-docker-data.sh  cleanup.sh  main.py  pyproject.toml  start.sh  stop.sh
api/: build_demo_index.py  quick_start.py  retrieval_api.py
api/config_examples/: multipath_with_graph_config.json  unified_bm25_config.json  unified_dense_config.json  unified_multipath_config.json
api/mcp/: server.py
api/routers/: auth.py  connection_manager.py  knowledge.py  mcp.py  rag_inference.py  session.py  user.py  util.py
application/account/: chat_message.py  chat_session.py  user.py
application/knowledge/: module.py
application/rag_inference/: module.py
config/application/: account_config.py  chat_message_config.py  knowledge_config.py  rag_inference_config.py  session_config.py
config/core/: listwise_reranker_config.py  query_rewrite_config.py  rerank_config.py
config/json_configs/: account.json  chat_message.json  knowledge.json  rag_inference.json  session.json
core/file_management/: index_manager.py  parser_combinator.py
core/prompts/: extractor_prompt.py  hipporag2_extractor_prompt.py  query_rewrite_prompt.py
core/query_rewrite/: base.py  llm_rewriter.py
core/rerank/: base.py  listwise_reranker.py  llm_reranker.py
core/retrieval/: base.py  dense.py  multipath.py  tantivy_bm25.py
core/user_management/: chat_message.py  chat_session.py  user.py
core/utils/: fusion.py  retrieval_helper.py
encapsulation/data_model/: orm_models.py  schema.py
encapsulation/database/: bm25_indexer.py
encapsulation/llm/: base.py  huggingface.py  openai.py  qwen.py
example/: demo_chat.py  demo_embedding.py  demo_extrator.py  demo_graph_retrieval.py  demo_graph_store.py
framework/: module_test.py  register.py  register_test.py  shared_module_decorator.py
test/: cleanup_db.py  test2.html  test_complete_e2e_api.py  test_docx.docx  test_user_isolation_e2e.py  user_isolation_retrieval_test.py
test/core/: test_chunker.py  (+10 more)
(+130 files in other folders)
